changed storage collection to double queue (#75)
* changed storage collection to double queue

* fixed name as per PR