@@ -2,9 +2,9 @@ package com.tabcorp.qa.common;
 
 import org.assertj.core.api.Assertions;
 
-import java.util.ArrayList;
+import java.util.Deque;
 import java.util.HashMap;
-import java.util.List;
+import java.util.LinkedList;
 import java.util.Map;
 
 public class Storage {
@@ -13,7 +13,6 @@ public class Storage {
     public enum KEY {
         EVENT_IDS,
         EVENT_NAMES,
-        PRODUCT_ID,
         PRODUCT_IDS
     }
 
@@ -25,29 +24,27 @@ public class Storage {
         map.put(key, value);
     }
 
-    public static void add(KEY key, Object value) {
-        List<Object> entries;
-        entries = (null == map.get(key)) ? new ArrayList<>() : (List) map.get(key) ;
-        entries.add(value);
-        map.put(key, entries);
-    }
-
     public static Object get(KEY key) {
         return Helpers.nonNullGet(map, key);
     }
 
-    public static Object poll(KEY key) {
-        List<Object> entries = (List) map.get(key);
+    public static void add(KEY key, Object value) {
+        Deque<Object> entries;
+        entries = (null == map.get(key)) ? new LinkedList<>() : (Deque) map.get(key);
+        entries.add(value);
+        map.put(key, entries);
+    }
+
+    public static Object removeFirst(KEY key) {
+        Deque<Object> entries = (Deque) map.get(key);
         Assertions.assertThat(entries).as(String.format("Data in storage key=%s", key)).isNotEmpty();
-        Object entry = entries.get(0);
-        entries.remove(0);
-        return entry;
+        return entries.removeFirst();
     }
 
     public static Object getLast(KEY key) {
-        List<Object> entries = (List) map.get(key);
+        Deque<Object> entries = (Deque) map.get(key);
         Assertions.assertThat(entries).as(String.format("Data in storage key=%s", key)).isNotEmpty();
-        return entries.get(entries.size() - 1);
+        return entries.getLast();
     }
 
 }
